[package]
name = "file_shred"
version = "1.1.4"
description = "Library and binary to securily delete files, overwriting and moving them before removal."
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://github.com/mverleg/file_shred"
repository = "https://github.com/mverleg/file_shred"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["files"]
edition = "2021"

[lib]
name = "file_shred"
path = "src/lib.rs"

[[bin]]
name = "shred"
path = "src/main.rs"

[dependencies]
filetime = "0.2.25"
indicatif = "0.17.11"
number2name = "1.1.2"
rand = "0.8.5"
structopt = { version = "0.3.26", default-features = false }

[dev-dependencies]
tempfile = "3.16.0"

[profile.release]
lto = 'thin'
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
debug = false
